--- a/springrest/src/main/resources/application.properties
+++ b/springrest/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=springrest
+spring.datasource.url=jdbc:mysql://localhost:3306/students
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=TTLShiwwya1234...
+
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate,dialect=org.hibernate.dialect.MySQL8Dialect
